@@ -10,6 +10,7 @@ auto-checkout =
   transmogrify.sqlinserter
   ftw.builder
   plonetheme.teamraum
+  ftw.upgrade
 
 [branches]
 ftw.datepicker = master
