@@ -22,6 +22,10 @@ Changelog
 - Dossier: Fixed start- and end-date validation in edit forms.
   [phgross]
 
+- Task: Adjust workflow, so that documents inside a task, aren't editable
+  when the dossier is closed.
+  [phgross]
+
 - AdvancedSearch: Added special description for the portal types field
   in a multiclientsetup.
   [phgross]
